--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2770,6 +2770,16 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
   year           = {2011}
 }
 
+@book{LEPdesign,
+      author        = "CERN",
+      title         = "{LEP Design Report}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      year          = "1984",
+      note          = "CERN-LEP-84-01",
+      volume        = "2: The LEP Main Ring"
+}
+
 @misc{bib:lhc:lumi,
   author = "{LHC Programme Coordination}",
   title = {Luminosity Plots for the 2011 Proton Run},
@@ -2785,7 +2795,6 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       number       = "\href{http://cdsweb.cern.ch/record/691782}{LHC-PROJECT-NOTE-323}",
       year         = "2003",
 }
-
 
 @article{Chatrchyan:2008zzk,
  collaboration = {CMS},
