--- a/Thesis.tex
+++ b/Thesis.tex
@@ -3,6 +3,7 @@
 
 \documentclass[
 twoside=true,
+BCOR10mm,
 headsepline,     % Line under page header
 headings=normal,
 open=right,
@@ -68,7 +69,7 @@ a4paper
 
 \input{definitions.tex}
 
-\author{Matthias Schr\"oder}
+\author{Kristin Goebel}
 
 % pdflatex packages
 \usepackage[pdftex]{hyperref}
@@ -107,7 +108,7 @@ a4paper
       \vskip2cm
       \begin{large}
         vorgelegt von\\
-        {\bf Kristin Goebel geb. Heine}\\
+        {\bf Dipl.- Phys. Kristin Goebel geb. Heine}\\
         aus Gifhorn
         \vfill
         \noindent{Hamburg\\2014}
