--- a/Stop.tex
+++ b/Stop.tex
@@ -10,11 +10,14 @@
 \subsection{Misidentification Rate}
 \label{subsec:stop_misid}
 
-\section{Identification of Selection Criteria}
+\section{Studies towards a Suitable Analysis Strategy}
 \label{sec:stop_cuts}
 
-\section{Comparison of the Performance of Various Selections}
-\label{sec:stop_limit_comp}
+\section{Results and Discussion}
+\label{sec:stop_results}
 
-\section{Impact of Specific Assumptions in the Analysis }
-\label{sec:stop_discussion}
+\subsection{Comparison of the Performance of Various Selections}
+\label{subsec:stop_limits_comp}
+
+\subsection{Discussion of Specific Simplified Assumptions in the Analysis }
+\label{subsec:stop_discussion}
